fix(app): homepage block vertical spacing:

--- a/app/styles/BookItem.module.css
+++ b/app/styles/BookItem.module.css
@@ -93,10 +93,6 @@
   color: #fff;
 }
 
-.item:hover .info {
-  border-color: #000;
-}
-
 .item:hover .info h3 {
   color: #fff;
   transform: translateX(-10px);
