--- a/app/styles/EventItem.module.css
+++ b/app/styles/EventItem.module.css
@@ -10,7 +10,7 @@ column-gap: 10px;
   font-size: 75px;
   text-transform: uppercase;
   letter-spacing: 7.5px;
-  padding-top: 10px;
+  padding-top: 30px;
   line-height: 50px;
 }
 
