--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -47,7 +47,7 @@
   text-transform: uppercase;
   text-align: center;
   position: absolute;
-  right: 50px;
+  right: calc(16vw - 220px);
   top: 450px;
   animation: spin 10s linear infinite, 1s ease-out 3s forwards fadeIn;
   opacity: 0;
@@ -139,7 +139,7 @@
 
 /* EVENTS / SPEAKING ENGAGEMENTS */
 .events {
-  padding-top: 500px;
+  padding-top: 600px;
   position: relative;
   width: 100%;
 }
@@ -222,7 +222,7 @@
   }
   .sticker {
     font-size: 22px;
-    right: 100px;
+    right: 94px;
     top: 350px;
     width: 220px;
     height: 220px;
@@ -249,6 +249,7 @@
     bottom: 150px;
   }
   .events {
+    margin-top: 100px;
     padding-top: 350px;
   }
   .events .wrapper {
@@ -258,10 +259,11 @@
   }
   .events .h2_wrapper {
     left: 75px;
-    top: 100px;
+    top: 150px;
     max-width: 800px;
   }
   .news {
+    margin-top: 100px;
     padding-top: 300px;
   }
   .news .h2_wrapper {
@@ -340,20 +342,20 @@
     padding: 0px 50px;
   }
   .hero h1 {
-    margin-top: 25px;
+    margin-top: 30px;
   }
   .hero_image {
     padding: 142px 150px 0 150px;
   }
   .sticker {
     font-size: 12px;
-    right: 90px;
+    right: 94px;
     top: 250px;
     width: 116px;
     height: 116px;
   }
   .recent {
-    margin-top: 250px;
+    margin-top: 450px;
   }
   .recent h2 {
     left: 50px;
@@ -374,7 +376,8 @@
     bottom: 80px;
   }
   .events {
-    padding-top: 225px;
+    padding-top: 200px;
+    margin-top: 150px;
   }
   .events .wrapper {
     margin: 0 80px;
@@ -417,6 +420,7 @@
   }
   .hero h1 {
     margin: 0px;
+    margin-top: -35px;
   }
   .hero_image {
     padding: 150px 75px 0 75px;
@@ -425,8 +429,8 @@
     display: none;
   }
   .recent {
-    margin-top: 150px;
-    padding-top: 200px;
+    margin-top: 350px;
+    padding-top: 100px;
   }
   .recent h2 {
     left: 37px;
